# astroharmony-vst

./: .gitignore
_tools/astroharmony-ui/: package-lock.json  package.json  vite.config.ts
_tools/astroharmony-ui-spike/: index.html  package-lock.json  package.json  vite.config.ts
_tools/astroharmony-ui-spike/src/: App.tsx  store.ts  styles.css
_tools/astroharmony-ui/src/: App.tsx  jucebridge.ts  main.tsx  styles.css
_tools/astroharmony-ui/src/components/piano/: PianoKeyboard.tsx
_tools/astroharmony-ui/src/components/picker/: DiatonicChords.tsx  SusChords.tsx
_tools/astroharmony-ui/src/components/v2/: BottomBar.tsx  ChordCardV2.tsx  DarkChordPicker.tsx  InstrumentPickerTop.tsx  LicenseGate.tsx  MoodSidebar.tsx  ProgressionV2.tsx  ProjectMenu.tsx  RightPanel.tsx  ScaleExtensionRow.tsx  SettingsPopover.tsx  SuggestedChords.tsx  TopBar.tsx  WriteWorkspaceV2.tsx
_tools/astroharmony-ui/src/hooks/: useChordPreview.ts
_tools/astroharmony-ui/src/lib/: audio.ts  instruments.ts  license-codes.json  license.ts  midi.ts  stateSync.ts  store.ts  theory.ts  voicings.ts
_tools/astroharmony-ui/src/lib/moodEngine/: index.ts  resolve.ts  suggest.ts  transforms.ts  types.ts
_tools/astroharmony-ui/src/lib/moodEngine/data/: adventure.ts  dark.ts  epic.ts  fantasy.ts  hopeful.ts  horror.ts  index.ts  love.ts  mystery.ts  sad.ts  tension.ts
_tools/astroharmony-ui/src/types/: music.ts
docs/manual/: build_manual.py
installer/: astroharmony.iss
plugins/AstroHarmony/: CMakeLists.txt  LICENSE.txt  status.json
plugins/AstroHarmony/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/AstroHarmony/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md
plugins/AstroHarmony/Seeds/: seed-sessions.json
plugins/AstroHarmony/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AstroHarmony/Source/audio/: AstroSamplerVoice.cpp  AstroSamplerVoice.h  SampleLibrary.cpp  SampleLibrary.h  SamplerEngine.cpp  SamplerEngine.h  Scheduler.cpp  Scheduler.h
plugins/AstroHarmony/Source/io/: SessionStore.cpp  SessionStore.h
plugins/AstroHarmony/Source/ui/public/: index.html
plugins/AstroHarmony_Spike/: CMakeLists.txt
plugins/AstroHarmony_Spike/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AstroHarmony_Spike/Source/ui/public/: index.html
plugins/SimpleGain/: CMakeLists.txt  status.json
plugins/SimpleGain/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/SimpleGain/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md
plugins/SimpleGain/Source/: ParameterIDs.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/SimpleGain/Source/ui/public/: index.html
plugins/SimpleGain/Source/ui/public/js/: index.js
plugins/SimpleGain/Source/ui/public/js/juce/: check_native_interop.js
